Split Function Added

--- a/ece5010/ece5010.csproj
+++ b/ece5010/ece5010.csproj
@@ -68,6 +68,9 @@
 	  <MauiXaml Update="MergeDetailPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="SplitDetailPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
