--- a/ece5010/ece5010.csproj
+++ b/ece5010/ece5010.csproj
@@ -91,4 +91,8 @@
 	  </MauiXaml>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\backend\backend.csproj" />
+	</ItemGroup>
+
 </Project>
