--- a/ece5010/ece5010.csproj
+++ b/ece5010/ece5010.csproj
@@ -69,9 +69,9 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="PDFsharp" Version="6.0.0" />
 	</ItemGroup>
-		<ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows10.0.19041.0'">
+		<!-- <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows10.0.19041.0'">
 		  <MauiCapability Include="internetClient" />
-		</ItemGroup>
+		</ItemGroup> -->
 
 	<ItemGroup>
 	  <MauiXaml Update="InsertDetailPage.xaml">
@@ -97,5 +97,9 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\backend\backend.csproj" />
 	</ItemGroup>
+
+	<PropertyGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows' and '$(RuntimeIdentifierOverride)' != ''">
+    	<RuntimeIdentifier>$(RuntimeIdentifierOverride)</RuntimeIdentifier>
+	</PropertyGroup>
 
 </Project>
