--- a/ece5010/Platforms/MacCatalyst/Entitlements.plist
+++ b/ece5010/Platforms/MacCatalyst/Entitlements.plist
@@ -3,6 +3,8 @@
 <plist version="1.0">
     <!-- See https://aka.ms/maui-publish-app-store#add-entitlements for more information about adding entitlements.-->
     <dict>
+<key>com.apple.security.files.user-selected.read-write</key>
+<true/>
         <!-- App Sandbox must be enabled to distribute a MacCatalyst app through the Mac App Store. -->
         <key>com.apple.security.app-sandbox</key>
         <true/>
